# kitty

./: .gitignore  Cargo.toml  README.md  debug_sqlite.sh  diagnose_sqlite.sh  migrate_sqlite.sh  test_restore.sh  test_sqlite.sh
src/: main.rs
src/commands/: add.rs  diff.rs  init.rs  list.rs  mod.rs  remove.rs  restore.rs
src/storage/: memory.rs  sqlite.rs
src/utils/: file.rs  mod.rs  privileges.rs
